--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run the builder
         shell: pwsh
         run: |
-          .\Generate-Fixlets.ps1
+          ./Generate-Fixlets.ps1
           
       - name: Upload the Build Artifact
         uses: actions/upload-artifact@v3.1.0
