--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
           name: Audit Fixlets
           # A file, directory or wildcard pattern that describes what to upload
           path: 
-            Output.zip
+            Output/*.bes
